--- a/style.css
+++ b/style.css
@@ -4,20 +4,40 @@
   font-family: "EB Garamond", serif;
   font-weight: 500;
 }
-::placeholder {
-  color: #7bb7b0;
-}
-:-ms-input-placeholder {
-  color: #7bb7b0;
-}
-::-ms-input-placeholder {
-  color: #7bb7b0;
-}
+
 body {
   position: relative;
   background-color: #f7e4d4;
   height: 100vh;
 }
+
+@media only screen and (max-width: 520px) {
+  .container {
+    height: 26rem;
+  }
+  h1 {
+    font-size: 36px;
+    text-align: left;
+  }
+  #dataCheck {
+    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+    width: 75%;
+  }
+  #btn-send {
+    height: 75%;
+    width: 75%;
+  }
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: normal;
+  text-align: center;
+  color: #467745;
+}
+
 .container {
   position: absolute;
   left: 50%;
@@ -29,12 +49,7 @@ body {
   grid-template-rows: 1fr 2fr 5fr 1fr 4fr;
   grid-row-gap: 1rem;
 }
-h2 {
-  font-size: 48px;
-  font-weight: normal;
-  text-align: center;
-  color: #467745;
-}
+
 #name {
   color: #467745;
   padding: 1rem;
@@ -60,32 +75,14 @@ a {
   color: #f7e4d4;
   border: none;
   border-radius: 50px;
-  width: 70%;
-  height: 80%;
+  max-width: 280px;
+  height: 80px;
   margin-top: 0.8rem;
   position: relative;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   letter-spacing: 0.2rem;
-}
-
-@media only screen and (max-width: 520px) {
-  .container {
-    height: 26rem;
-  }
-  h2 {
-    font-size: 36px;
-    text-align: left;
-  }
-  #dataCheck {
-    align-items: center;
-    display: grid;
-    grid-template-columns: 1fr 9fr;
-    width: 75%;
-  }
-  #btn-send {
-    height: 75%;
-    width: 75%;
-  }
+  font-weight: normal;
+  font-size: 21px;
 }
